kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: mern

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend

          image: 224193574273.dkr.ecr.ap-south-1.amazonaws.com/backend1:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 3500

          livenessProbe:
            httpGet:
              path: /healthz
              port: 3500
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /ready
              port: 3500
            initialDelaySeconds: 20
            periodSeconds: 10

          startupProbe:
            httpGet:
              path: /started
              port: 3500
            failureThreshold: 30
            periodSeconds: 10
