kubernetes/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: mern

spec:
  selector:
    app: backend

  ports:
    - name: http
      protocol: TCP
      port: 3500
      targetPort: 3500

  type: ClusterIP
