kubernetes/mongodb-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb-service
  namespace: mern

spec:
  selector:
    app: mongodb

  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017

  type: ClusterIP
