kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mern-ingress
  namespace: mern
  

  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:

    - host: mern.local

      http:
        paths:

          # Frontend
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # Backend API
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 3500
